# openmax_qingwei

./: README.md
openmax/include/omx-iva/: omx_iva.h
openmax/src/: openmax.mk
openmax/src/limoa/: ChangeLog  Makefile.am  NEWS  OSM_README  README  configure.ac  liblimoa.pc.in  osm
openmax/src/limoa/include/: Makefile.am  OpenMAXAL.h  OpenMAXAL_Platform.h
openmax/src/limoa/src/: Makefile.am
openmax/src/limoa/src/backend/: Makefile.am  ox-main.h  ox-session.h
openmax/src/limoa/src/backend/common/: common-be.h
openmax/src/limoa/src/backend/engine/: engine-be.h
openmax/src/limoa/src/backend/output-mix/: output-mix-be.h
openmax/src/limoa/src/backend/player/: player-be.h
openmax/src/limoa/src/common/: Makefile.am  limdeepcopy.h  limipc-id-callback.h  limipc-id-engine.h  limipc-id-output-mix.h  limipc-id-player.h  limipc-id.h  limipc.h  limoa-log.h
openmax/src/limoa/src/frontend/: Makefile.am
openmax/src/limoa/src/frontend/common/: common-fe.h
openmax/src/limoa/src/frontend/engine/: engine-fe.h
openmax/src/limoa/src/frontend/output-mix/: output-mix-fe.h
openmax/src/limoa/src/frontend/player/: player-fe.h
openmax/src/limoa/test/: Makefile.am
openmax/src/limoi-base/: Makefile.am  README  configure.ac  liblimoi-base.pc.in  osm
openmax/src/limoi-base/include/: Makefile.am  limoi-audio-decoder.h  limoi-audio-encoder.h  limoi-audio-renderer.h  limoi-audio.h  limoi-component.h  limoi-data-split12.h  limoi-demuxer.h  limoi-iva40_uvc.h  limoi-iva50_uvc.h  limoi-log.h  limoi-muxer.h  limoi-resource-manager.h  limoi-video-decoder.h  limoi-video-encoder.h  limoi-video-iva01.h  limoi-video-iva10.h  limoi-video-iva11.h  limoi-video-iva12.h  limoi-video-iva20.h  limoi-video-iva21.h  limoi-video-iva22.h  limoi-video-iva30.h  limoi-video-iva40.h  limoi-video-renderer.h  limoi-video-scheduler.h  limoi-video-sink.h  limoi-video-split12.h  limoi-video-src.h  limoi-video-src01.h  limoi-video-src02_ir.h  limoi-video-src02_vis.h  limoi-video-src03.h  limoi-video.h  limoi.h
openmax/src/limoi-base/src/: Makefile.am  component.h
openmax/src/limoi-base/src/audio/: audio-priv.h
openmax/src/limoi-base/src/other/: other-priv.h
openmax/src/limoi-base/src/video/: video-priv.h
openmax/src/limoi-base/test/: Makefile.am
openmax/src/limoi-components/: Makefile  osm
openmax/src/limoi-components/alsa_sink/: configure.ac
openmax/src/limoi-components/alsa_sink/include/: Makefile.am  limoi-alsa.h
openmax/src/limoi-components/alsa_sink/src/: Makefile.am
openmax/src/limoi-components/alsa_sink/test/: Makefile.am
openmax/src/limoi-components/clock/: configure.ac
openmax/src/limoi-components/clock/include/: Makefile.am  limoi-clock.h
openmax/src/limoi-components/clock/src/: Makefile.am
openmax/src/limoi-components/ffmpeg/: Makefile  osm
openmax/src/limoi-components/ffmpeg/decode/: configure.ac
openmax/src/limoi-components/ffmpeg/decode/src/: Makefile.am
openmax/src/limoi-components/ffmpeg/demux/: COPYING  configure.ac
openmax/src/limoi-components/ffmpeg/demux/src/: Makefile.am
openmax/src/limoi-components/ffmpeg/encode/: ChangeLog  configure.ac
openmax/src/limoi-components/ffmpeg/encode/include/: Makefile.am  limoi-ffmpeg-encode-audio.h  limoi-ffmpeg-encode-video.h
openmax/src/limoi-components/ffmpeg/encode/src/: Makefile.am
openmax/src/limoi-components/ffmpeg/libomx-ffmpeg/: Makefile.am  README  configure.ac  libomx-ffmpeg.pc.in
openmax/src/limoi-components/ffmpeg/libomx-ffmpeg/include/: Makefile.am  omx-ffmpeg.h
openmax/src/limoi-components/ffmpeg/libomx-ffmpeg/src/: Makefile.am
openmax/src/limoi-components/ffmpeg/libomx-ffmpeg/test/: Makefile.am
openmax/src/limoi-components/ffmpeg/mux/: configure.ac
openmax/src/limoi-components/ffmpeg/mux/src/: Makefile.am
openmax/src/limoi-components/ffmpeg/patches/: 0001-export-audioconvert-header.patch
openmax/src/limoi-components/image_proc/: image_process.h
openmax/src/limoi-components/mad_dec/: Makefile.am  README  configure.ac
openmax/src/limoi-components/mad_dec/include/: Makefile.am  limoi-mad.h
openmax/src/limoi-components/mad_dec/src/: Makefile.am
openmax/src/limoi-components/mad_dec/test/: Makefile.am
openmax/src/limoi-components/ogg_dec/: Makefile.am  README  configure.ac
openmax/src/limoi-components/ogg_dec/include/: Makefile.am  limoi-ogg.h
openmax/src/limoi-components/ogg_dec/src/: Makefile.am
openmax/src/limoi-components/ogg_dec/test/: Makefile.am
openmax/src/limoi-components/sdl/: Makefile  osm
openmax/src/limoi-components/sdl/video_sink/: configure.ac
openmax/src/limoi-components/sdl/video_sink/src/: Makefile.am
openmax/src/limoi-components/video_3d/include/: base90_indoor.h  limoi-videoiva11-3d.h  limoi-videoiva20-3d.h  limoi-videoiva22-3d.h  limoi-videoiva30-3d.h
openmax/src/limoi-components/video_3d/src/: base_right.h  speckle_left.h
openmax/src/limoi-components/video_dpu/test/: Makefile.am
openmax/src/limoi-components/video_scheduler/: configure.ac
openmax/src/limoi-components/video_scheduler/src/: Makefile.am
openmax/src/limoi-core/: ChangeLog  Makefile.am  README  configure.ac  liblimoi-core.pc.in  osm
openmax/src/limoi-core/include/: Makefile.am  OMX_ContentPipe.h  OMX_Core.h  OMX_Lim.h  OMX_Other.h  OMX_Types.h
openmax/src/limoi-core/src/: Makefile.am  contentpipe.h  core.h  resource-manager.h
openmax/src/limoi-core/test/: Makefile.am
openmax/src/limoi-plugins/: Makefile  osm
openmax/src/limoi-plugins/resource_managers/: Makefile  osm
openmax/src/limoi-plugins/resource_managers/demo/: README  configure.ac
openmax/src/limoi-plugins/resource_managers/demo/include/: Makefile.am  lim-demo-resource-manager.h
openmax/src/limoi-plugins/resource_managers/demo/src/: Makefile.am
openmax/src/limoi-plugins/resource_managers/demo/test/: Makefile.am
openmax/src/limutil/: ChangeLog  Makefile.am  README  configure.ac  liblimutil.pc.in  osm
openmax/src/limutil/include/: Makefile.am  limdir.h  limlog.h  limmemory.h  limqlist.h  limthread.h  limutil.h
openmax/src/limutil/src/: Makefile.am  memory.bakup
openmax/src/limutil/test/: Makefile.am
(+57 files in other folders)
