include_extradir = $(includedir)/limoi

include_extra_HEADERS = \
	limoi.h \
	limoi-log.h \
	limoi-component.h \
	limoi-audio.h \
	limoi-video.h \
	limoi-audio-decoder.h \
	limoi-audio-encoder.h \
	limoi-audio-renderer.h \
	limoi-video-decoder.h \
	limoi-video-encoder.h \
	limoi-video-renderer.h \
	limoi-video-scheduler.h \
	limoi-video-src.h \
	limoi-demuxer.h \
	limoi-muxer.h \
	limoi-resource-manager.h
