limoicomponent_LTLIBRARIES = liblimoi-clock.la

liblimoi_clock_la_SOURCES = clock.c

liblimoi_clock_la_CFLAGS = -Wall -Werror -fno-strict-aliasing \
	$(LIMOI_CFLAGS) $(LIMOIBASE_CFLAGS) \
	-I$(top_srcdir)/include

liblimoi_clock_la_LIBADD = $(LIMOIBASE_LIBS)

liblimoi_clock_la_LDFLAGS = $(limoicomponent_ldflags)

